--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,19 @@ android {
     compileSdkVersion 21
     buildToolsVersion "21.1.1"
 
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'
+    }
+
     defaultConfig {
         applicationId "com.yulius.belitungtrip"
         minSdkVersion 15
@@ -20,6 +33,8 @@ android {
 }
 
 dependencies {
+//    compile 'com.google.guava:guava-collections:r03'
+//    compile 'com.google.guava:guava:18.0'
     compile 'io.realm:realm-android:0.79.1'
     compile 'com.google.android.gms:play-services:+'
     compile 'com.android.support:support-v4:21.0.+'
@@ -32,7 +47,9 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.1.1'
     compile 'com.getbase:floatingactionbutton:1.5.1'
     compile 'com.github.flavienlaurent.datetimepicker:library:0.0.2'
-    compile files('libs/ActiveAndroid-3.0.jar')
+    compile files('libs/guava-collections-r03.jar')
+    compile files('libs/collections-generic-4.01.jar')
+//    compile files('libs/guava-18.0.jar')
     compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:0.4.0@aar'){
         transitive=true
     }
